@startuml
interface org.ull.dap.app.views.INotificationView {
~ void showNotification(List<String>,Map<String,String>)
}
class org.ull.dap.app.views.desktop.NotificationDesktop {
- boolean changeColor
- JPanel notificationPanel
- JPanel titlePanel
- JPanel footerPanel
- JPanel cryptoPanel
- JLabel lblTitle
- JScrollPane scrollPaneCrypto
+ {static} String ROUTE_IMAGE_LOGO
- void initializeUI()
- JPanel getNotificationPanel()
- JPanel getTitlePanel()
- JLabel getLblTitle()
+ ImageIcon resizeIcon(ImageIcon,int,int)
- JPanel getFooterPanel()
- JLabel getLblFooter()
- JScrollPane getScrollPaneCrypto()
- JPanel getCryptoPanel()
+ void showNotification(List<String>,Map<String,String>)
+ {static} String extractNameCrypto(String)
}
interface org.ull.dap.app.views.IDataView {
~ List<String> getUsersSelected()
~ List<INotificationView> getNotifications()
~ void windowSelectCryptos()
~ String getUserComboBoxString()
}
class org.ull.dap.app.views.desktop.DataDesktop {
+ {static} String ROUTE_IMAGE_LOGO
- JLabel lblTitle
- JButton btnStart
- JComboBox<String> comboBoxUsersSelected
- JList<String> usersList
- JPanel contentPane
- AppController controller
- List<String> usersSelected
- List<String> usersAvailable
- Map<String,JButton> addButtonMap
- Map<String,JButton> deleteButtonMap
- List<INotificationView> notifications
- IDashboardView dashboardDesktop
- void initializeUI()
- JLabel getLblLogo()
- JLabel getLblTitle()
- ImageIcon resizeImage(ImageIcon,int,int)
+ JButton getBtnLogin()
+ JList<String> getListUsers()
+ JPanel getPanelLogin()
+ void windowSelectCryptos()
- void fillComboBoxUsers()
- JPanel getPanelSelectCrypto()
- JScrollPane displayCryptos()
- JPanel createItemCrypto(String,String)
- JLabel createImageCrypto(String)
- JLabel getLblUser()
+ JComboBox<String> getComboBoxUsersSelected()
+ String getUserComboBoxString()
+ List<String> getUsersSelected()
+ List<INotificationView> getNotifications()
+ void setUsersSelected(List<String>)
+ void setDashboardDesktop(DashboardDesktop)
+ IDashboardView getDashboardDesktop()
- JButton getBtnStart()
+ void enableButtons(String,boolean)
- void eventButtons()
- void activateButtons(String)
}
class org.ull.dap.app.views.cli.DataViewCLI {
- AppController controller
- List<INotificationView> notifications
- List<String> usersAvailable
- List<String> usersSelected
- String currentUser
- void menuUsers()
- void selectUsers(Scanner,int)
- void processUserSelection(int)
+ void showSubscribers()
+ void showUsersAvailable()
+ List<String> getUsersSelected()
+ List<INotificationView> getNotifications()
+ void windowSelectCryptos()
- void processCryptoSelection(String)
- void selectCryptos(Scanner,int)
- void processCryptoSelection(int)
+ void showListCryptos()
+ String getUserComboBoxString()
}
interface org.ull.dap.app.views.IDashboardView {
~ void updateData(List<Asset>)
}
class org.ull.dap.app.views.cli.NotificationCLI {
+ void showNotification(List<String>,Map<String,String>)
}
class org.ull.dap.app.views.desktop.DashboardDesktop {
- XYSeries bitcoinSeries
- XYSeries ethereumSeries
- DefaultPieDataset datasetPieChart
- DefaultCategoryDataset datasetBarChart
- void initializeUI()
- void customizeChartAxis(JFreeChart)
- void customizeChartRenderer(JFreeChart,Color)
+ void updateData(List<Asset>)
}


org.ull.dap.app.views.INotificationView <|.. org.ull.dap.app.views.desktop.NotificationDesktop
org.ull.dap.app.views.desktop.JFrame <|-- org.ull.dap.app.views.desktop.NotificationDesktop
org.ull.dap.app.views.IDataView <|.. org.ull.dap.app.views.desktop.DataDesktop
org.ull.dap.app.views.desktop.JFrame <|-- org.ull.dap.app.views.desktop.DataDesktop
org.ull.dap.app.views.IDataView <|.. org.ull.dap.app.views.cli.DataViewCLI
org.ull.dap.app.views.INotificationView <|.. org.ull.dap.app.views.cli.NotificationCLI
org.ull.dap.app.views.IDashboardView <|.. org.ull.dap.app.views.desktop.DashboardDesktop
org.ull.dap.app.views.desktop.JFrame <|-- org.ull.dap.app.views.desktop.DashboardDesktop
@enduml